compiler/testData/diagnostics/nativeTests/dynamic.kt
// RUN_PIPELINE_TILL: FRONTEND
// IGNORE_FIR_DIAGNOSTICS

fun test(a: <!UNSUPPORTED!>dynamic<!>) = a
